# mesmerize-template

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.cfg
src/utils/: configuremesmerize.py
{{ cookiecutter.project_name }}/: Dockerfile
{{ cookiecutter.project_name }}/src/: __init__.py
{{ cookiecutter.project_name }}/src/utils/: numba_configurere.py
