[metadata]
name = mesmerize-module
version = attr: src.VERSION
description = Mesmerize <module> package
long_description = file: README.rst, LICENSE.rst
keywords = mesmerize, <module>
license = GNU GPL v3.0
classifiers =
    Topic :: Scientific/Engineering :: Visualization :: Web
    Intended Audience :: Information Technology,
    Intended Audience :: Research,
    Intended Audience :: Science,
    Intended Audience :: Analysis,
    Operating System :: OS Independent,
    Programming Language :: Python :: 3,
    Programming Language :: Python,
    Topic :: Internet,
    Typing :: Typed,
    Development Status :: Alpha,
    Environment :: Web Environment,
    License :: OSI Approved :: GNU GPL v3.0 License,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,